<resources>
    <string name="hello">Hi!</string>
    <string name="start">Play</string>
    <string name="app_name">Terra Map Quiz</string>
    <string name="app_desc">Terra Map Quiz is a simple Geo-quiz. Test yor geographical knowledge in more than a 
        dozen \"hand drawm\" maps and over 400 locations. Completely add-free! </string>
    <string name="europe_countries1">Europe (Countries 1)</string>
    <string name="europe_countries_all">Europe (All Countries)</string>
    <string name="europe_countries2">Europe (Countries 2)</string>
    <string name="europe_cities">Europe (biggest cities)</string>
    <string name="clickinstruction">Click on &#160;</string>
    <string name="heart">&#9829;</string>
    <string name="three_hearts">&#9829;&#9829;&#9829;</string>
    <string name="defaultStr">Default</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="england">England</string>
    <string name="poland">Poland</string>
    <string name="spain">Spain</string>
    <string name="island">Island</string>
    <string name="northern_ireland">Northern Ireland</string>
    <string name="ireland">Ireland</string>
    <string name="scotland">Scotland</string>
    <string name="wales">Wales</string>
    <string name="portugal">Portugal</string>
    <string name="italy">Italy</string>
    <string name="switzerland">Switzerland</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="belgium">Belgium</string>
    <string name="the_netherlands">The Netherlands</string>
    <string name="denmark">Denmark</string>
    <string name="norway">Norway</string>
    <string name="sweden">Sweden</string>
    <string name="finland">Finland</string>
    <string name="austria">Austria</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="slowakia">Slowakia</string>
    <string name="hungary">Hungary</string>
    <string name="slowenia">Slowenia</string>
    <string name="croatia">Croatia</string>
    <string name="bosnia_and_herzegowina">Bosnia and Herzegowina</string>
    <string name="serbia">Serbia</string>
    <string name="montenegro">Montenegro</string>
    <string name="albania">Albania</string>
    <string name="greece">Greece</string>
    <string name="macedonia">Macedonia</string>
    <string name="kosovo">Kosovo</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="romania">Romania</string>
    <string name="moldova">Moldova</string>
    <string name="ukraine">Ukraine</string>
    <string name="belarus">Belarus</string>
    <string name="malta">Malta</string>
    <string name="turkey">Turkey</string>
    <string name="cyprus">Cyprus</string>
    <string name="lithuania">Lithuania</string>
    <string name="latvia">Latvia</string>
    <string name="estonia">Estonia</string>
    <string name="russia">Russia</string>
    <string name="x_y">x/y</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_level_select">Select a Map</string>
    <string name="countries_of_europe">Countries of Europe</string>
    <string name="countries_of_africa_south">Countries of Africa (south)</string>
    <string name="cities_in_north_central_america">Cities in North/Central America</string>
    <string name="mexico_city">Mexico City</string>
    <string name="new_york_city">New York City</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="chicago">Chicago</string>
    <string name="toronto">Toronto</string>
    <string name="washington">Washington</string>
    <string name="ottawa">Ottawa</string>
    <string name="santo_domingo">Santo Domingo</string>
    <string name="havana">Havana</string>
    <string name="houston">Houston</string>
    <string name="montral">Montréal</string>
    <string name="portauprince">Port-au-Prince</string>
    <string name="kingston">Kingston</string>
    <string name="guatemala_city">Guatemala City</string>
    <string name="tegucigalpa">Tegucigalpa</string>
    <string name="managua">Managua</string>
    <string name="san_salvador">San Salvador</string>
    <string name="panama_city">Panama City</string>
    <string name="san_jose">San Jose</string>
    <string name="belmopan">Belmopan</string>
    <string name="nassau">Nassau</string>
    <string name="cities_in_south_america">Cities in South America</string>
    <string name="buenos_aires">Buenos Aires</string>
    <string name="sao_paulo">Sao Paulo</string>
    <string name="lima">Lima</string>
    <string name="bogota">Bogota</string>
    <string name="rio_de_janeiro">Rio de Janeiro</string>
    <string name="santiago">Santiago</string>
    <string name="salvador_de_bahia">Salvador de Bahia</string>
    <string name="maracaibo">Maracaibo</string>
    <string name="braslia">Brasília</string>
    <string name="medellin">Medellin</string>
    <string name="guayaquil">Guayaquil</string>
    <string name="caracas">Caracas</string>
    <string name="santa_cruz">Santa Cruz</string>
    <string name="quito">Quito</string>
    <string name="montevideo">Montevideo</string>
    <string name="georgetown">Georgetown</string>
    <string name="la_paz">La Paz</string>
    <string name="asuncin">Asunción</string>
    <string name="cities_in_oceaniasoutheast_asia">Cities in Oceania/Southeast Asia</string>
    <string name="sydney">Sydney</string>
    <string name="melbourne">Melbourne</string>
    <string name="perth">Perth</string>
    <string name="auckland">Auckland</string>
    <string name="port_moresby">Port Moresby</string>
    <string name="wellington">Wellington</string>
    <string name="jakarta">Jakarta</string>
    <string name="dili">Dili</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="manila">Manila</string>
    <string name="singapore">Singapore</string>
    <string name="sri_jayawardenapurakotte">Sri Jayawardenapura-Kotte</string>
    <string name="surabaya">Surabaya</string>
    <string name="cities_in_asia">Cities in Asia</string>
    <string name="shanghai">Shanghai</string>
    <string name="karachi">Karachi</string>
    <string name="delhi">Delhi</string>
    <string name="dhaka">Dhaka</string>
    <string name="soeul">Soeul</string>
    <string name="tokyo">Tokyo</string>
    <string name="lahore">Lahore</string>
    <string name="islamabad">Islamabad</string>
    <string name="bangkok">Bangkok</string>
    <string name="bangalore">Bangalore</string>
    <string name="kabul">Kabul</string>
    <string name="tashkent">Tashkent</string>
    <string name="dushanbe">Dushanbe</string>
    <string name="bishkek">Bishkek</string>
    <string name="astana">Astana</string>
    <string name="ulaanbaatar">Ulaanbaatar</string>
    <string name="pyongyang">P\'yongyang</string>
    <string name="hanoi">Hanoi</string>
    <string name="taipei">Taipei</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="rangoon">Rangoon</string>
    <string name="phnom_penh">Phnom Penh</string>
    <string name="vientiane">Vientiane</string>
    <string name="cities_in_region_near_eastcaucasus">Cities in Region Near East/Caucasus</string>
    <string name="istanbul">Istanbul</string>
    <string name="ankara">Ankara</string>
    <string name="baghdad">Baghdad</string>
    <string name="jerusalem">Jerusalem</string>
    <string name="beirut">Beirut</string>
    <string name="amman">Amman</string>
    <string name="tbilisi">Tbilisi</string>
    <string name="yerewan">Yerewan</string>
    <string name="baku">Baku</string>
    <string name="damascus">Damascus</string>
    <string name="mosul">Mosul</string>
    <string name="aleppo">Aleppo</string>
    <string name="al_basrah">Al Basrah</string>
    <string name="kuwait">Kuwait</string>
    <string name="tehran">Tehran</string>
    <string name="cities_around_the_arabian_sea">Cities around the Arabian Sea</string>
    <string name="riyadh">Riyadh</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="dubai">Dubai</string>
    <string name="muscat">Muscat</string>
    <string name="sanaa">Sana\'a</string>
    <string name="addis_ababa">Addis Ababa</string>
    <string name="djibouti">Djibouti</string>
    <string name="asmera">Asmera</string>
    <string name="juba">Juba</string>
    <string name="khartoum">Khartoum</string>
    <string name="kandahar">Kandahar</string>
    <string name="mecca">Mecca</string>
    <string name="cairo">Cairo</string>
    <string name="medina">Medina</string>
    <string name="cities_in_northern_africa">Cities in northern Africa</string>
    <string name="lagos">Lagos</string>
    <string name="alexandria">Alexandria</string>
    <string name="casablanca">Casablanca</string>
    <string name="abidjan">Abidjan</string>
    <string name="kano">Kano</string>
    <string name="algier">Algier</string>
    <string name="tunis">Tunis</string>
    <string name="dakar">Dakar</string>
    <string name="douala">Douala</string>
    <string name="yaound">Yaoundé</string>
    <string name="abuja">Abuja</string>
    <string name="rabat">Rabat</string>
    <string name="monrovia">Monrovia</string>
    <string name="freetown">Freetown</string>
    <string name="conakry">Conakry</string>
    <string name="accra">Accra</string>
    <string name="niamey">Niamey</string>
    <string name="ndjamena">N\'Djamena</string>
    <string name="bamako">Bamako</string>
    <string name="tripoli">Tripoli</string>
    <string name="cities_in_southern_africa">Cities in southern Africa</string>
    <string name="kinshasa">Kinshasa</string>
    <string name="luanda">Luanda</string>
    <string name="johannesburg">Johannesburg</string>
    <string name="cape_town">Cape Town</string>
    <string name="dar_es_salaam">Dar Es Salaam</string>
    <string name="antananarivo">Antananarivo</string>
    <string name="maputo">Maputo</string>
    <string name="harare">Harare</string>
    <string name="lusaka">Lusaka</string>
    <string name="gabarone">Gabarone</string>
    <string name="windhoek">Windhoek</string>
    <string name="libreville">Libreville</string>
    <string name="kampala">Kampala</string>
    <string name="nairobi">Nairobi</string>
    <string name="kigali">Kigali</string>
    <string name="bujumbura">Bujumbura</string>
    <string name="brazzaville">Brazzaville</string>
    <string name="biggest_cities_worldwide">Biggest cities worldwide</string>
    <string name="beijing">Beijing</string>
    <string name="bogot">Bogotá</string>
    <string name="guangzhou">Guangzhou</string>
    <string name="kolkata">Kolkata</string>
    <string name="london">London</string>
    <string name="moscow">Moscow</string>
    <string name="mumbai">Mumbai</string>
    <string name="osaka">Osaka</string>
    <string name="so_paulo">São Paulo</string>
    <string name="seoul">Seoul</string>
    <string name="biggest_oceans_and_seas">Biggest oceans and seas</string>
    <string name="pacific_ocean">Pacific Ocean</string>
    <string name="atlantic_ocean">Atlantic Ocean</string>
    <string name="indian_ocean">Indian Ocean</string>
    <string name="arctic_ocean">Arctic Ocean</string>
    <string name="south_china_sea">South China Sea</string>
    <string name="caribbean_sea">Caribbean Sea</string>
    <string name="mediterranean_sea">Mediterranean Sea</string>
    <string name="bering_sea">Bering Sea</string>
    <string name="sea_of_okhotsk">Sea of Okhotsk</string>
    <string name="gulf_of_mexico">Gulf of Mexico</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="welcome_to_mapquiz">Welcome to Mapquiz</string>
    <string name="restart_level">Restart Level</string>
    <string name="training_mode">Training Mode</string>
    <string name="level_selection">Level Selection</string>
    <string name="cancel">Cancel</string>
</resources>