<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              >

    <Button
        android:id="@+id/restart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart_level" />

    <Button
        android:id="@+id/training"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_mode" />

   
    <Button
        android:id="@+id/level_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_selection" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    
</LinearLayout>