<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_weight="0.4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:contentDescription="@string/welcome_to_mapquiz"
         />

    <Button
        android:id="@+id/startGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/start" />
    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/settings" />
        <Button
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/about" />

</LinearLayout>